<resources>
    <string name="app_name">BookingCare</string>
    <string name="navigation_drawer_open">open navigation drawer</string>
    <string name="navigation_drawer_close">close navigation drawer</string>
    <string name="splash">splashActivityImage</string>
    <string name="txtTitle">BookingCare</string>
    <string name="title_activity_pharmacy__maps">Pharmacy Search</string>
    <string name="map_key" translatable="false">AIzaSyDeifxBV4rPaVvQT66FdWuNb6z5Mn5tRtg</string>
    <!--LoginPage Strings-->
    <string name="DoctorButton">Doctor Login</string>
    <string name="AdminButton">Admin Login</string>
    <string name="Email" />
    <string name="password" />
    <string name="Taable">create tabele</string>
    <string name="PhoneNumber" />
    <string name="Name" />
    <string name="enterName">Enter your full name</string>
    <string name="HintEmail">Enter email id</string>
    <string name="hintPassword">Create password</string>
    <string name="hintPhone">Enter your phone number</string>
    <string name="Number" />
    <string name="Phone">phone</string>
    <string name="HintPass">Passsword</string>
    <string name="HintName">Name</string>
    <string name="LoginActivity">Login</string>
    <string name="passwordL">PassWord</string>
    <string name="EmailLogin">Email</string>
    <string name="LoginBtn">Login</string>
    <string name="Logo">Book Appointment</string>
    <string name="SelDocHeading">Please select Doctor</string>
    <string name="SelDate">Please select date For Appointment</string>
    <string name="Date" />
    <string name="PickDate">Select Date for Appointment</string>
    <string name="DisplayDate" />
    <string name="DateFormat">mm/dd/yyyy</string>
    <string name="ShowTimeSlot">Show Available time slots</string>
    <string name="NewLayout" />
    <string name="Logindisp" />
    <string name="disPhone" />
    <string name="DispEm" />
    <string name="DocName" />
    <string name="DateA" />
    <string name="BookA">Book Appointment</string>
    <string name="TimeSlot1">9:00 - 10:30</string>
    <string name="TimeSlot2">10:30 -11:30</string>
    <string name="TimeSlot3">11:30 -12:30</string>
    <string name="TimeSlot4">2:00 - 3:00</string>
    <string name="TimeSlot5">3:00 -4:00</string>
    <string name="TimeSlot6">4:00 - 5:00</string>
    <string name="TimeSlot7">5:00 - 6:00</string>
    <string name="TSlot">Show available Time slots</string>
    <string name="txtLogin">Register</string>
    <string name="PatientButton">Patient Login</string>
    <string name="txtmemLogin">Already Member</string>
    <string name="txtdoc">Doctor Name</string>
    <string-array name="DocName">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string-array name="TimeSlots">
        <item>Start time 8:00 AM</item>
        <item>Start time 8:30 AM</item>
        <item>Start time 9:00 AM</item>
        <item>Start time 9:30 AM</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtmaintitle">BookingCare</string>
    <string name="txttag">Upgrade Your Healthcare</string>
    <string name="btnregistermain">Register</string>
    <string name="btnloginmain">Login</string>
    <string name="txtFormtitle">Appointment Details</string>
    <string name="ApointH">Apointment Time</string>
    <string name="btnformhome">Home</string>
    <string name="PhoneH">Phone</string>
</resources>
